output
student@cec-ThinkCentre-M83:~/sai$ javac evenoddexception.java
student@cec-ThinkCentre-M83:~/sai$ java evenoddexception
enter the no
4
even
successful!!!
student@cec-ThinkCentre-M83:~/sai$ java evenoddexception
enter the no
3
odd
successful!!!
student@cec-ThinkCentre-M83:~/sai$ gedit exp2.java
student@cec-ThinkCentre-M83:~/sai$ javac exp2.java
exp2.java:16: error: unreported exception negException; must be caught or declared to be thrown
    throw new negException("negative no");
    ^
exp2.java:35: error: cannot find symbol
   avge(n);
   ^
  symbol:   method avge(int)
  location: class exp2
2 errors
student@cec-ThinkCentre-M83:~/sai$ gedit exp2.java
student@cec-ThinkCentre-M83:~/sai$ javac exp2.java
exp2.java:16: error: unreported exception negException; must be caught or declared to be thrown
    throw new negException("negative no");
    ^
1 error
student@cec-ThinkCentre-M83:~/sai$ gedit exp2.java
student@cec-ThinkCentre-M83:~/sai$ javac exp2.java
student@cec-ThinkCentre-M83:~/sai$ java exp2
enter the limit of nos :
3
2
4
6
avg of nos = 4
end....
student@cec-ThinkCentre-M83:~/sai$ gedit exp2.java
student@cec-ThinkCentre-M83:~/sai$ javac exp2.java
student@cec-ThinkCentre-M83:~/sai$ java exp2
enter the limit of nos :
3
enter the nos :
1 
2
3
avg of nos = 2
end....
student@cec-ThinkCentre-M83:~/sai$ java exp2
enter the limit of nos :
4
enter the nos :
3
-2
negative no
end....
student@cec-ThinkCentre-M83:~/sai$ gedit exp2.java


19/5
student@cec-ThinkCentre-M83:~$ gedit filereadwriteexample.java
student@cec-ThinkCentre-M83:~$ javac filereadwriteexample.java
student@cec-ThinkCentre-M83:~$ java filereadwriteexample
File written successfully.
Contents of the file:
Hello, this is a simple file write and read program in Java.
student@cec-ThinkCentre-M83:~$ gedit filereadwriteexample.java
student@cec-ThinkCentre-M83:~$ javac filereadwriteexample.java
student@cec-ThinkCentre-M83:~$ java filereadwriteexample
Enter text to write to the file: hello im sai
Your input has been written to the file.

Contents of the file:
hello im sai
student@cec-ThinkCentre-M83:~$ gedit filereadwriteexample.java
^C
student@cec-ThinkCentre-M83:~$ gedit file.java
student@cec-ThinkCentre-M83:~$ javac file.java
file.java:4: error: ';' expected
public static void main(String args[])
                                      ^
file.java:6: error: illegal start of type
try{
^
file.java:22: error: illegal start of type
catch(Exception e)
^
file.java:22: error: ';' expected
catch(Exception e)
                 ^
4 errors
student@cec-ThinkCentre-M83:~$ gedit file.java
student@cec-ThinkCentre-M83:~$ javac file.java
file.java:16: error: unexpected type
while((1=f2.read())!=-1)
       ^
  required: variable
  found:    value
file.java:16: error: cannot find symbol
while((1=f2.read())!=-1)
           ^
  symbol:   method read()
  location: variable f2 of type FileWriter
2 errors
student@cec-ThinkCentre-M83:~$ gedit file.java
student@cec-ThinkCentre-M83:~$ javac file.java
student@cec-ThinkCentre-M83:~$ java file
java.io.FileNotFoundException: file2.txt (No such file or directory)
student@cec-ThinkCentre-M83:~$ gedit file.java
student@cec-ThinkCentre-M83:~$ gedit file.java
student@cec-ThinkCentre-M83:~$ javac file.java
student@cec-ThinkCentre-M83:~$ java file
Enter text to write to the file: hello hai
content write to file1.txt
read the content ftom file
h
e
l
l
o
 
h
a
i
student@cec-ThinkCentre-M83:~$ gedit file1.java
student@cec-ThinkCentre-M83:~$ javac file1.java
file1.java:5: error: unreported exception FileNotFoundException; must be caught or declared to be thrown
FileInputStream f=new FileInputStream("sample.txt");
                  ^
file1.java:6: error: unreported exception FileNotFoundException; must be caught or declared to be thrown
FileOutputStream f2=new FileOutputStream("cp.txt");
                    ^
file1.java:8: error: unreported exception IOException; must be caught or declared to be thrown
while((c=f.read())!= -1)
               ^
file1.java:10: error: unreported exception IOException; must be caught or declared to be thrown
f2.write(c);
        ^
file1.java:13: error: unreported exception IOException; must be caught or declared to be thrown
f.close();
       ^
file1.java:14: error: unreported exception IOException; must be caught or declared to be thrown
f2.close();
        ^
6 errors
student@cec-ThinkCentre-M83:~$ gedit file1.java
student@cec-ThinkCentre-M83:~$ gedit file1.java
student@cec-ThinkCentre-M83:~$ javac file1.java
student@cec-ThinkCentre-M83:~$ java file1
error
student@cec-ThinkCentre-M83:~$ gedit file1.java
student@cec-ThinkCentre-M83:~$ javac file1.java
student@cec-ThinkCentre-M83:~$ java file1
sample txt 1 copy me
file copied successfully

^C
student@cec-ThinkCentre-M83:~/sai$ gedit exp2.java

student@cec-ThinkCentre-M83:~$ gedit file2.java
student@cec-ThinkCentre-M83:~$ gedit file2.java
student@cec-ThinkCentre-M83:~$ javac file2.java
student@cec-ThinkCentre-M83:~$ java file2
Error: Could not find or load main class file2
Caused by: java.lang.ClassNotFoundException: file2
student@cec-ThinkCentre-M83:~$ gedit file2.java
student@cec-ThinkCentre-M83:~$ javac file2.java
student@cec-ThinkCentre-M83:~$ java file2
0123456789


Contents of odd.txt:
13579
Contents of even.txt:
02468s

example for using StringTokenizer

import java.io.*;
import java.util.StringTokenizer;

class file2 {
    public static void main(String args[]) throws IOException {
        FileInputStream f = new FileInputStream("number.txt");
        BufferedReader reader = new BufferedReader(new InputStreamReader(f));
        FileOutputStream f2 = new FileOutputStream("odd.txt");
        FileOutputStream f3 = new FileOutputStream("even.txt");

        String line;
        while ((line = reader.readLine()) != null) {
            StringTokenizer tokenizer = new StringTokenizer(line, " "); // tokenizing by space
            while (tokenizer.hasMoreTokens()) {
                String token = tokenizer.nextToken();
                try {
                    int number = Integer.parseInt(token); // parse each token into an integer

                    if (number % 2 == 0) {
                        f3.write((token + " ").getBytes()); // write even number to even.txt
                    } else {
                        f2.write((token + " ").getBytes()); // write odd number to odd.txt
                    }
                } catch (NumberFormatException e) {
                    System.out.println("Skipping invalid token: " + token);
                }
            }
        }

        f.close();
        f2.close();
        f3.close();

        System.out.println("\nContents of odd.txt:");
        try (FileInputStream oddFile = new FileInputStream("odd.txt")) {
            int c;
            while ((c = oddFile.read()) != -1) {
                System.out.print((char) c);
            }
        }

        System.out.println("\nContents of even.txt:");
        try (FileInputStream evenFile = new FileInputStream("even.txt")) {
            int c;
            while ((c = evenFile.read()) != -1) {
                System.out.print((char) c);
            }
        }
    }
}
________________________________________________________________________________
program:
import java.util.*;
class arraylist{
public static void main(String args[])
{
ArrayList<Integer> num= new ArrayList<>();
num.add(10);
num.add(20);
num.add(30);
Scanner sc= new Scanner(System.in);
System.out.println("enter new element");
num.add(sc.nextInt());
System.out.println("List: "+num);
int numb=num.get(2);
System.out.println("accessed element "+numb);
int renum=num.remove(1);
System.out.println("removed element :"+renum);
for(int i = 0;i < num.size();i++)
{
System.out.print(num.get(i)+" ");
}sc.close();
}
}
-------------------------------------------
output:
user@user-HP-280-G3-MT:~$ gedit arraylist.java
user@user-HP-280-G3-MT:~$ javac arraylist.java
user@user-HP-280-G3-MT:~$ java arraylist
enter new element
23
List: [10, 20, 30, 23]
accessed element 30
removed element :20
10 30 23 
_________________________________________________________________________________

package
